# keel

./: .gitignore  README.md  pyproject.toml
action/: action.yml  drift_check.py
features/: README.md  planned-canvas-manual-editing.md  planned-resizable-sidebars.md  planned-selective-drill-down.md  planned-ui-theme-refresh.md  planned-uml-and-multi-viewpoint-diagrams.md  wp-001-schema-and-file-io.md  wp-002-claude-bridge.md  wp-003-keel-init.md  wp-004-dev-server-and-canvas.md  wp-005-ai-sparring.md  wp-006-requirements-adrs-characteristics.md  wp-007-work-package-generation.md  wp-008-drift-detection.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/canvas/: expansion.ts
frontend/src/components/: ADRsPanel.tsx  Canvas.tsx  CharacteristicsPanel.tsx  ExpandableNode.tsx  GroupNode.tsx  NodeDetailPanel.tsx  RequirementsPanel.tsx  Sidebar.tsx  SparMessageContent.tsx  SparringPanel.tsx
frontend/src/spar/: sessions.ts
keel/: __init__.py  architecture_store.py  assess.py  claude_bridge.py  cli.py  document_store.py  drift.py  file_io.py  git_utils.py  init_cmd.py  schema.py  server.py  spar.py  work_packages.py
keel/action/: __init__.py  drift_check.py
keel/templates/: CLAUDE.md.jinja  cursorrules.jinja  keel-drift.yml
scripts/: build_frontend.sh
tests/: test_claude_bridge.py  test_cli.py  test_documents.py  test_drift.py  test_init.py  test_markdown_io.py  test_schema_and_file_io.py  test_server.py  test_spar.py  test_work_packages.py
