[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Keel Python package: CLI (`keel`), FastAPI server, and .keel/ file logic.
# Frontend lives in frontend/ and is built into keel/static/ separately.

[project]
name = "keel"
version = "0.1.0"
description = "AI-native orchestration layer for the non-code phases of the SDLC"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "gitpython>=3.1",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
keel = "keel.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["keel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
